manifests/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsaar-webhook
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulsaar-webhook
  template:
    metadata:
      labels:
        app: pulsaar-webhook
        pulsaar.io/webhook: "disabled"
    spec:
      serviceAccountName: pulsaar-webhook
      containers:
      - name: webhook
        image: vrushankpatel/pulsaar-webhook:latest
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: webhook-certs
          mountPath: /etc/webhook/certs
          readOnly: true
      volumes:
      - name: webhook-certs
        secret:
          secretName: pulsaar-webhook-tls
---
apiVersion: v1
kind: Service
metadata:
  name: pulsaar-webhook
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: pulsaar-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pulsaar-webhook
webhooks:
- name: pulsaar-agent-injector.pulsaar.io
  clientConfig:
    service:
      name: pulsaar-webhook
      namespace: default
      path: /mutate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZHekNDQXdPZ0F3SUJBZ0lVVmhGalFiK2NrZnZldWIrTTJrSEwwZWxNYVdnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hURWJNQmtHQTFVRUF3d1NjSFZzYzJGaGNpMTNaV0pvYjI5ckxXTmhNQjRYRFRJMk1ERXdOakE1TkRrMApNbG9YRFRJM01ERXdOakE1TkRrME1sb3dIVEViTUJrR0ExVUVBd3dTY0hWc2MyRmhjaTEzWldKb2IyOXJMV05oCk1JSUNJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBZzhBTUlJQ0NnS0NBZ0VBdDR1NU1aK1lJZi85SGpSenNCUGcKTWhFNCtFYU4weG5FY2hvdENoZ0hPdWt6OWZ4OWpNS2dUYTEyK3MrN3Bjcm9QWkEyeFd3cXFZZkE2azVUZEJsbworazBTVnlWVEVyeH [...]
  objectSelector:
    matchExpressions:
    - key: pulsaar.io/webhook
      operator: DoesNotExist
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
